asm_tests/other_testfiles/invalid_files/error38.s
.name "MORO"
.comment "MORJESTA!"

aff 
